--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
+	<head>
+		<title>雨中人的测试网页</title>
+	</head>
 	<body>
 		<h1>Hello World</h1>
-		<p>I'm hosted with GitHub Pages.</p>
 	</body>
 </html>
